--- a/music-project/src/index.css
+++ b/music-project/src/index.css
@@ -1,68 +1,116 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
+  padding: 0;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  box-sizing: border-box;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+nav{
+    display: flex;
+    align-items: center;
+    background-color: #040D12;
+    justify-content: space-evenly;
+    width: 100%;
+    height: auto;
+    padding: 40px;
+    gap: 30px;
+    font-family: 'Fira Sans Extra Condensed';
+}
+.logo{
+    width: 36vh;
+    height: 10vh;
+    cursor: pointer;
+    background-image: url('./assets/logo3.png');
+    background-size: cover;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.profile{
+  width: 40px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  height: 40px;
+  background-image: url('./assets/profile-icon.jpg');
+  background-size: cover;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+ul{
+  flex: 1;
+  list-style: none;
+  text-align: center;
+}
+ul li{
+  display: inline-block;
+  margin: 10px 20px;
+  color: #f1f1f1d0;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+ul li:hover{
+  color: #FFFFFF;
+}
+
+.search-box{
+  display: flex;
+  align-items: center;
+  background: #f7f7f7;
+  padding: 10px 20px;
+  border-radius: 50px;
+}
+
+.search-box input{
+  padding: 6px;
+  background: transparent;
+  border: 0;
+  outline: 0;
+  font-family: 'Fira Sans Extra Condensed';
+  color: #0c0c0c;
+  font-size: 18px;
+  max-width: 200px;
+}
+
+.search-box input::placeholder{
+  color: #0f0f0f;
+}
+
+.search-box img{
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.hero-container{
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  gap: 2%;
+  justify-content: center;
+  align-items: center;
+  background-color: #040D12;
+}
+
+.hero-container h1{
+  font-family: Roboto;
+  font-size: 5em;
+  cursor: default;
+  font-weight: 100;
+  color: #FFFFFF;
+}
+
+.hero-container h2{
+  font-family: Roboto;
+  font-size: 5em;
+  cursor: default;
+  font-weight: bold;
+  color: #FFFFFF;
+}
+
+.hero-container h2:hover{
+  color: #0c0c0c;
+  background-color: #FFFFFF;
+  border-radius: 80px;
+  padding: 20px;
+  transition: .2s ease-in-out;
 }
