--- a/music-project/src/index.css
+++ b/music-project/src/index.css
@@ -42,6 +42,7 @@ ul{
 ul li{
   display: inline-block;
   margin: 10px 20px;
+  padding: 10px;
   color: #f1f1f1d0;
   font-size: 18px;
   cursor: pointer;
@@ -49,6 +50,7 @@ ul li{
 
 ul li:hover{
   color: #FFFFFF;
+  transition: .2s ease-in-out;
 }
 
 .search-box{
@@ -96,7 +98,7 @@ ul li:hover{
   font-size: 5em;
   cursor: default;
   font-weight: 100;
-  color: #FFFFFF;
+  color: #B6B6B6;
 }
 
 .hero-container h2{
@@ -105,12 +107,4 @@ ul li:hover{
   cursor: default;
   font-weight: bold;
   color: #FFFFFF;
-}
-
-.hero-container h2:hover{
-  color: #0c0c0c;
-  background-color: #FFFFFF;
-  border-radius: 80px;
-  padding: 20px;
-  transition: .2s ease-in-out;
 }
