--- a/music-project/src/index.css
+++ b/music-project/src/index.css
@@ -10,7 +10,7 @@
 nav{
     display: flex;
     align-items: center;
-    background-color: #040D12;
+    background-color: #050505;
     justify-content: space-evenly;
     width: 100%;
     height: auto;
@@ -67,13 +67,13 @@ ul li:hover{
   border: 0;
   outline: 0;
   font-family: 'Fira Sans Extra Condensed';
-  color: #0c0c0c;
+  color: #050505;
   font-size: 18px;
   max-width: 200px;
 }
 
 .search-box input::placeholder{
-  color: #0f0f0f;
+  color: #050505;
 }
 
 .search-box img{
@@ -90,7 +90,7 @@ ul li:hover{
   gap: 2%;
   justify-content: center;
   align-items: center;
-  background-color: #040D12;
+  background-color: #050505;
 }
 
 .hero-container h1{
@@ -107,4 +107,26 @@ ul li:hover{
   cursor: default;
   font-weight: bold;
   color: #FFFFFF;
+}
+
+.particles-container {
+  position: relative;
+  width: 100%;
+  height: calc(60vh + 40px);
+}
+.particles-container > #tsparticles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.section-container{
+  background-color: #F5F7F8;
+  height: auto;
+  min-height: 50vh;
+  padding: 20px;
+  width: 100%;
 }
