--- a/music-project/src/index.css
+++ b/music-project/src/index.css
@@ -124,9 +124,30 @@ ul li:hover{
 }
 
 .section-container{
-  background-color: #F5F7F8;
+  background-color: #f7f7f7;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 15%;
   height: auto;
+  align-items: center;
   min-height: 50vh;
-  padding: 20px;
+  padding: 8%;
   width: 100%;
+}
+
+.section-cards{
+  height: auto;
+  width: 20%;
+  color: white;
+  text-align: center;
+  font-family: 'Fira Sans Extra Condensed';
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 15px;
+  background-color: #1a1a1a;
+  border-radius: 20px;
 }
