--- a/music-project/src/index.css
+++ b/music-project/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
   padding: 0;
@@ -94,19 +95,33 @@ ul li:hover{
 }
 
 .hero-container h1{
-  font-family: Roboto;
-  font-size: 5em;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 7em;
+  letter-spacing: 0.1em;
   cursor: default;
   font-weight: 100;
-  color: #B6B6B6;
+  color: #57f7ff;
 }
 
 .hero-container h2{
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 5em;
   cursor: default;
   font-weight: bold;
   color: #FFFFFF;
+}
+
+.hero-container h1, .hero-container h2 {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 1.2s ease forwards;
+}
+
+@keyframes fadeInUp {
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
 }
 
 .particles-container {
@@ -124,30 +139,71 @@ ul li:hover{
 }
 
 .section-container{
-  background-color: #f7f7f7;
+  background-color: black;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 15%;
+  flex-direction: column;
   height: auto;
   align-items: center;
   min-height: 50vh;
-  padding: 8%;
   width: 100%;
 }
 
-.section-cards{
-  height: auto;
-  width: 20%;
+.section-title{
+  display: flex;
+  width: 100%;
   color: white;
+  padding: 10vh 0px 0px 0px;
+  height: auto;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  font-family: 'Fira Sans Extra Condensed';
+  font-family: Roboto;
+  font-size: 1.5em;
+}
+
+.section-line {
+  border-radius: 35px;
+  background-color: white;
+  height: 2.5px;
+  width: 50%;
+}
+
+.section-layer{
+  width: 100%;
+  height: auto;
   padding: 30px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  gap: 2%;
+}
+
+.section-layer-cards{
+  height: auto;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  width: 20vw;
+  background-color: #fafafa;
+  display: flex;
   flex-direction: column;
-  gap: 15px;
-  background-color: #1a1a1a;
-  border-radius: 20px;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  border-radius: 12px;
+  padding: 25px;
+  min-height: 50vh;
+}
+.section-layer-cards:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.section-layer-cards-logo {
+  height: 100px;
+  width: 100px;
+}
+
+.section-layer-cards h2{
+  font-family: 'Fira Sans Extra Condensed';
+  font-weight: 400;
+  font-size: 1.3em;
 }
