--- a/music-project/src/index.css
+++ b/music-project/src/index.css
@@ -7,18 +7,6 @@
   margin: 0;
   box-sizing: border-box;
 }
-
-nav{
-    display: flex;
-    align-items: center;
-    background-color: #050505;
-    justify-content: space-evenly;
-    width: 100%;
-    height: auto;
-    padding: 40px;
-    gap: 30px;
-    font-family: 'Fira Sans Extra Condensed';
-}
 .logo{
     width: 36vh;
     height: 10vh;
@@ -83,6 +71,17 @@ ul li:hover{
   cursor: pointer;
 }
 
+nav{
+  display: flex;
+  align-items: center;
+  background-color:  #111111;
+  justify-content: space-evenly;
+  width: 100%;
+  height: auto;
+  padding: 40px;
+  gap: 30px;
+  font-family: 'Fira Sans Extra Condensed';
+}
 .hero-container{
   width: 100%;
   height: 60vh;
@@ -91,7 +90,7 @@ ul li:hover{
   gap: 2%;
   justify-content: center;
   align-items: center;
-  background-color: #050505;
+  background-color:   #111111;
 }
 
 .hero-container h1{
@@ -100,7 +99,7 @@ ul li:hover{
   letter-spacing: 0.1em;
   cursor: default;
   font-weight: 100;
-  color: #57f7ff;
+  color: #ffffff6b;
 }
 
 .hero-container h2{
@@ -139,7 +138,7 @@ ul li:hover{
 }
 
 .section-container{
-  background-color: black;
+  background-color: #F5F5F5;
   display: flex;
   flex-direction: column;
   height: auto;
@@ -151,20 +150,20 @@ ul li:hover{
 .section-title{
   display: flex;
   width: 100%;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 10vh 0px 0px 0px;
   height: auto;
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-family: Roboto;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.5em;
 }
 
 .section-line {
   border-radius: 35px;
-  background-color: white;
-  height: 2.5px;
+  background-color: rgb(0, 0, 0);
+  height: 4px;
   width: 50%;
 }
 
@@ -181,10 +180,10 @@ ul li:hover{
   height: auto;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   width: 20vw;
-  background-color: #fafafa;
+  box-shadow: 300px;
+  background-color: #ebebeb;
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
   justify-content: space-around;
   align-items: center;
   text-align: center;
@@ -192,6 +191,7 @@ ul li:hover{
   padding: 25px;
   min-height: 50vh;
 }
+
 .section-layer-cards:hover {
   transform: translateY(-10px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
@@ -206,4 +206,11 @@ ul li:hover{
   font-family: 'Fira Sans Extra Condensed';
   font-weight: 400;
   font-size: 1.3em;
+}
+
+.blog-layer-container{
+  width: 100%;
+  height: auto;
+  min-height: 30vh;
+  background-color: #111111;
 }
