--- a/music-project/src/index.css
+++ b/music-project/src/index.css
@@ -15,6 +15,17 @@
     background-size: cover;
 }
 
+.background{
+  width: 100%;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  background-image: url("./assets/guitar-background3.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .profile{
   width: 40px;
   cursor: pointer;
@@ -74,7 +85,6 @@ ul li:hover{
 nav{
   display: flex;
   align-items: center;
-  background-color:  #111111;
   justify-content: space-evenly;
   width: 100%;
   height: auto;
@@ -84,13 +94,12 @@ nav{
 }
 .hero-container{
   width: 100%;
-  height: 60vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   gap: 2%;
   justify-content: center;
   align-items: center;
-  background-color:   #111111;
 }
 
 .hero-container h1{
@@ -98,8 +107,8 @@ nav{
   font-size: 7em;
   letter-spacing: 0.1em;
   cursor: default;
-  font-weight: 100;
-  color: #ffffff6b;
+  font-weight: bold;
+  color: #ffffff;
 }
 
 .hero-container h2{
@@ -107,7 +116,7 @@ nav{
   font-size: 5em;
   cursor: default;
   font-weight: bold;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .hero-container h1, .hero-container h2 {
@@ -180,6 +189,7 @@ nav{
   height: auto;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   width: 20vw;
+  border: 2.5px solid black;
   box-shadow: 300px;
   background-color: #ebebeb;
   display: flex;
@@ -194,6 +204,7 @@ nav{
 
 .section-layer-cards:hover {
   transform: translateY(-10px);
+  cursor: pointer;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
