--- a/music-project/src/index.css
+++ b/music-project/src/index.css
@@ -292,14 +292,15 @@ nav{
   background-color: #F5F5F5;
   display: flex;
   align-items: center;
-  justify-content: center;
   padding: 30px;
 }
 
 .feat-prod-box{
   height: auto;
+  min-height: 40vh;
+  border-radius: 5px;
   width: 50vw;
-  padding: 25px 25px 25px 20vw;
+  padding: 40px 40px 40px 15vw;
   display: flex;
   gap: 20px;
   background-color: #dfdfdf94;
@@ -328,4 +329,55 @@ nav{
   font-family: Montserrat;
   font-weight: 500;
   color: #000000c7;
+}
+
+.feat-prod-box-info h3{
+  color: black;
+  font-weight: bold;
+  font-family: Montserrat;
+  font-size: 1.8em;
+}
+
+.feat-prod-box-info-button-area{
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+
+.button-81 {
+  background-color: #fff;
+  border: 0 solid #e2e8f0;
+  border-radius: 1.5rem;
+  box-sizing: border-box;
+  color: #0d172a;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Basier circle",-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1.1rem;
+  font-weight: 600;
+  line-height: 1;
+  padding: 1rem 1.6rem;
+  text-align: center;
+  text-decoration: none #0d172a solid;
+  text-decoration-thickness: auto;
+  transition: all .1s cubic-bezier(.4, 0, .2, 1);
+  box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-81:hover {
+  background-color: #000000;
+  color: #fff;
+}
+
+@media (min-width: 768px) {
+  .button-81 {
+    font-size: 1.125rem;
+    padding: 1rem 2rem;
+  }
 }
