--- a/music-project/src/index.css
+++ b/music-project/src/index.css
@@ -233,6 +233,20 @@ nav{
   color: rgba(255, 255, 255, 0.856);
 }
 
+.blog-layer-container3{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding-top: 50px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #111111;
+  color: rgba(255, 255, 255, 0.856);
+}
+
 .blog-layer-container h1{
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
@@ -386,8 +400,142 @@ nav{
 .footer-container{
   width: 100%;
   height: auto;
-  min-height: 30vh;
+  min-height: 60vh;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 30px;
   background-color: black;
+}
+
+.footer-info{
+  display: flex;
+  gap: 20px;
+  justify-content: space-evenly;
+  align-items: center;
+  height: auto;
+  min-height: 18vh;
+  width: 80%;
+}
+
+.footer-info-i{
+  display: flex;
+  flex-direction: column;
+  color: white;
+  height: auto;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-info-i h1{
+  font-size: 1.5em;
+  font-family: montserrat;
+}
+
+.footer-info-i h3{
+  font-size: 1em;
+  font-family: montserrat;
+}
+
+.footer-line{
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.267);
+  width: 80%;
+  height: 5px;
+}
+
+.footer-info-2{
+  display: flex;
+  gap: 20px;
+  justify-content: space-evenly;
+  align-items: center;
+  height: auto;
+  min-height: 18vh;
+  width: 80%;
+}
+
+footer{
+  background-color: #000000;
+}
+.footerContainer{
+  width: 100%;
+  padding: 70px 30px 20px ;
+}
+.socialIcons{
+  display: flex;
+  justify-content: center;
+}
+.socialIcons a{
+  text-decoration: none;
+  padding:  10px;
+  background-color: white;
+  margin: 10px;
+  border-radius: 50%;
+}
+.socialIcons a i{
+  font-size: 2em;
+  color: black;
+  opacity: 0,9;
+}
+/* Hover affect on social media icon */
+.socialIcons a:hover{
+  background-color: #111;
+  transition: 0.5s;
+}
+.socialIcons a:hover i{
+  color: white;
+  transition: 0.5s;
+}
+.footerNav{
+  margin: 30px 0;
+}
+.footerNav ul{
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+}
+.footerNav ul li a{
+  color:white;
+  margin: 20px;
+  text-decoration: none;
+  font-size: 1.3em;
+  opacity: 0.7;
+  transition: 0.5s;
+
+}
+.footerNav ul li a:hover{
+  opacity: 1;
+}
+.footerBottom{
+  background-color: #000;
+  padding: 20px;
+  text-align: center;
+}
+.footerBottom p{
+  color: white;
+}
+.designer{
+  opacity: 0.7;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 400;
+  margin: 0px 5px;
+}
+@media (max-width: 700px){
+  .footerNav ul{
+      flex-direction: column;
+  } 
+  .footerNav ul li{
+      width:100%;
+      text-align: center;
+      margin: 10px;
+  }
+  .socialIcons a{
+      padding: 8px;
+      margin: 4px;
+  }
 }
 
 @media (min-width: 768px) {
