--- a/music-project/src/index.css
+++ b/music-project/src/index.css
@@ -119,6 +119,7 @@ nav{
 }
 
 
+
 @keyframes fadeInUp {
   to {
       opacity: 1;
@@ -126,46 +127,19 @@ nav{
   }
 }
 
-.blog-layer-container{
+.section-container{
   width: 100%;
   height: auto;
   min-height: 50vh;
   display: flex;
   flex-direction: column;
-  padding-top: 50px;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  background-color: rgb(240, 240, 240);
-  font-family: 'Montserrat', sans-serif;
-  color: rgba(255, 255, 255, 0.856);
-}
-
-.blog-layer-container6{
-  width: 100%;
-  height: auto;
-  min-height: 50vh;
-  display: flex;
-  flex-direction: column;
-  padding-top: 50px;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-family: 'Montserrat', sans-serif;
-  color: rgba(255, 255, 255, 0.856);
-}
-
-
-.square{
-  height: 200px;
-  width: 200px;
-  background-color: blue;
-  border-radius: 15px;
-  border: 2px solid white;
-}
-
-.square:hover{
-  cursor: pointer;
+  overflow: hidden;
+  background-image: url('./assets/texture2.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .feat-prod-container{
