--- a/music-project/src/index.css
+++ b/music-project/src/index.css
@@ -112,7 +112,7 @@ nav{
   align-items: flex-start;
   flex-direction: column;
   font-family: libre franklin;
-  color: #ffdf2b;
+  color: white;
   font-size: 2.5em;
   padding-bottom: 10vh;
   text-align: left;
@@ -167,7 +167,6 @@ nav{
   height: auto;
   min-height: 50vh;
   display: flex;
-  background-color: black;
   align-items: center;
   padding: 30px;
 }
@@ -260,122 +259,35 @@ nav{
   color: #fff;
 }
 
-.footer-container{
-  width: 100%;
-  height: auto;
-  min-height: 60vh;
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 30px;
-}
-
-.footer-info{
-  display: flex;
-  gap: 20px;
-  justify-content: space-evenly;
-  align-items: center;
-  height: auto;
-  min-height: 18vh;
-  width: 80%;
-}
-
-.footer-info-i{
-  display: flex;
-  flex-direction: column;
-  color: white;
-  height: auto;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.footer-info-i h1{
-  font-size: 1.5em;
-  font-family: montserrat;
-}
-
-.footer-info-i h3{
-  font-size: 1em;
-  font-family: montserrat;
-}
-
-.footer-line{
-  border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.267);
-  width: 80%;
-  height: 5px;
-}
-
-.footer-info-2{
-  display: flex;
-  gap: 20px;
-  justify-content: space-evenly;
-  align-items: center;
-  height: auto;
-  min-height: 18vh;
-  width: 80%;
-}
-
 footer{
-  
-}
-.footerContainer{
-  width: 100%;
-  padding: 70px 30px 20px ;
-}
-.socialIcons{
   display: flex;
+  flex-direction: column;
   justify-content: center;
-}
-.socialIcons a{
-  text-decoration: none;
-  padding:  10px;
-  margin: 10px;
-  border-radius: 50%;
-}
-.socialIcons a i{
-  font-size: 2em;
-  color: black;
-  opacity: 0,9;
+  gap: 50px;
+  align-items: center;
+  background-image: url('./assets/texture2.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px;
 }
 
-.socialIcons a:hover{
-  background-color: #111;
-  transition: 0.5s;
-}
-.socialIcons a:hover i{
-  color: white;
-  transition: 0.5s;
-}
-.footerNav{
-  margin: 30px 0;
-}
-.footerNav ul{
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
-}
-.footerNav ul li a{
-  color:white;
-  margin: 20px;
+.footer-nav a{
+  outline: none;
   text-decoration: none;
-  font-size: 1.3em;
-  opacity: 0.7;
-  transition: 0.5s;
+  color: rgb(0, 0, 0);
+  font-family: Montserrat;
+  font-weight: bold;
+  font-size: 1em;
+}
 
+
+.copyright{
+  color: rgb(0, 0, 0);
+  font-family: montserrat;
+  font-weight: bold;
 }
-.footerNav ul li a:hover{
-  opacity: 1;
-}
-.footerBottom{
-  padding: 20px;
-  text-align: center;
-}
-.footerBottom p{
-  color: white;
-}
+
 .designer{
   opacity: 0.7;
   text-transform: uppercase;
