--- a/music-project/src/index.css
+++ b/music-project/src/index.css
@@ -221,17 +221,16 @@ nav{
 
 .testimonials-container{
   min-height: 25vh;
-  width: 15%;
+  width: 20%;
   height: auto;
   background-color: white;  
-  border: 2px solid black;
+  border: 2px solid rgb(0, 0, 0);
   border-radius: 15px;
   padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 20px;
-  justify-content: space-evenly;
-  align-items: flex-start;
+  box-shadow: #000000 10px 10px;
 }
 
 .quotes{
@@ -248,17 +247,26 @@ nav{
 
 .testimonials-info-container{
   display: flex;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
-  gap: 50px;
 }
 
 .testimonials-names{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   font-family: Montserrat;
+}
+
+.testimonials-profile{
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  border: 2px solid black;
+  object-fit: cover;
+  object-position: center center;
 }
 
 .feat-prod-container {
