--- a/music-project/src/index.css
+++ b/music-project/src/index.css
@@ -8,6 +8,8 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+
 .logo{
     width: 36vh;
     height: 10vh;
@@ -37,6 +39,12 @@
   background-size: cover;
 }
 
+nav ul li a {
+  color: rgb(255, 255, 255); 
+  text-decoration: none; 
+}
+
+
 ul{
   flex: 1;
   list-style: none;
@@ -45,6 +53,8 @@ ul{
 ul li{
   display: inline-block;
   margin: 10px 20px;
+  text-decoration: none;
+  outline: none;
   padding: 10px;
   color: #f1f1f1d0;
   font-size: 18px;
